[metadata]
name = csc_tools
version = 0.0.1b0
url =
download_url = 
author = Sharif Nada
author_email = s.nada@uq.edu.au
maintainer =
maintainer_email = 
classifiers =
    Environment :: Console
    Framework :: Setuptools Plugin
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Proprietary
license_files = 
description = Tools for the Australian Computational and Simulation Commons
long_description = file: README.rst
long_description_content_type = 
keywords =
platforms =
provides =
requires =
obsoletes = 

[options]
zip_safe = False
include_package_data = False
install_requires =
    importlib-metadata; python_version<"3.8"
    pyyaml>=6.0
    click>=8.1
    cerberus>=1.3
    ckanapi>=4.7
    tqdm>=4.64



[options.entry_points]
console_scripts = 
    csct = csct.__main__:cli

[options.extras_require]
docs = sphinx>=5.0; sphinx-rtd-theme>=1.0.0

[options.packages.find]
exclude =